# patch-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: sync-openapi-v3.yml
clients/go/: README.md  client.go  client_test.go  go.mod
clients/python/: README.md  setup.py
clients/python/patch_client/: __init__.py  client.py
clients/python/tests/: test_client.py
clients/rust/: Cargo.toml
clients/rust/src/: client.rs  error.rs  lib.rs  model.rs
clients/rust/tests/: models.rs
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.type-tests.json
clients/typescript/src/: client.ts  index.ts
clients/typescript/test/: client-error-parsing.test.js
clients/typescript/test-types/: client-signatures.test.ts
docs/plans/: 2026-04-16-openapi-sync-design.md  2026-04-16-openapi-sync.md  2026-04-16-v3-openapi-alignment-design.md  2026-04-16-v3-openapi-alignment.md
openapi/: openapi-v3.json
scripts/: update-openapi-v3.sh
