[package]
name = "patch-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
tokio = { version = "1.35", features = ["full"] }
percent-encoding = "2.3"
